# kindle-clippings-extractor

./: README.md  pyproject.toml
src/: cli.py
