[tool.poetry]
name = "kindle-clippings-extractor"
version = "0.1.0"
description = ""
authors = ["MartinLwx <MartinLwx@163.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
